# pyvplm

./: .gitignore  .readthedocs.yml  AUTHORS.txt  CHANGELOG.rst  LICENSE  README.md  User Guide.bat  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build_release.yml  tests.yml
docs/: requirements.txt
docs/source/: conf.py  modules.rst  pyvplm.addon.rst  pyvplm.rst  pyvplm.tests.rst
notebooks/: 01_inductor_example.ipynb  02_propeller_example.ipynb  03_housing_example.ipynb  04_motor_example.ipynb
notebooks/.ipynb_checkpoints/: 01_heatsink_example-checkpoint.ipynb  01_inductor_example-checkpoint.ipynb  03_housing_example-checkpoint.ipynb  04_landingGear_example-checkpoint.ipynb
notebooks/01_inductor_example/: input_01.txt  output_01.txt
notebooks/02_propeller_example/: APC_STATIC-data-all-props.csv  APC_summary_file.csv
notebooks/02_propeller_example/apc_data/: apc_extractor.py
notebooks/03_housing_example/: dataPI0_carter.csv
notebooks/04_motor_example/: Massive_Torque.py  output.xls  output.xlsx  saved_results.xls  saved_results_ipm_new.xls  saved_results_ipm_old.xls  saved_results_spm_old.xls
pyVPLM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyvplm/addon/: comsoladdon.py  pixdoe.py  variablepowerlaw.py  variablepowerlaw.py.bak
pyvplm/core/: definition.py  definition.py.bak
pyvplm/tests/: test_notebook.py
tests/: test_notebooks.py
