[tool.black]
    line-length = 100

[tool.poetry]
    name = "pyvplm"
    version = "0.1.0"
    description = "Variable Power-Law regression Models tool"
    authors = [
        "Aurélien REYSSET <aurelien.reysset@insa-toulouse.fr>",
        "Marc BUDINGER <marc.budinger@insa-toulouse.fr>",
        "Scott DELBECQ <scott.delbecq@isae-supaero.fr>"
    ]
    license = "MIT"
    readme = "README.md"
    homepage = "https://github.com/SizingLab/pyvplm"
    keywords = [
        "regression",
        "dimensional analysis",
        "metamodeling"
    ]
    classifiers = [
        "Environment :: Console",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Education",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.7",
        "Topic :: Scientific/Engineering :: Physics"
    ]
    include = [
        "LICENSE"
    ]

[tool.poetry.dependencies]
    python = "^3.6.1"
    numpy = "*"
    scipy = "*"
    scikit-learn = "*"
    pandas = "*"
    sympy="*"
    matplotlib = "*"
    ipywidgets = "*"
    ipython = "*"
    pydoe2 = "*"
    pint = "*"
    xlwt = "*"
    xlrd = "*"

[tool.poetry.dev-dependencies]
    wheel = "*"
    pytest = "^5.2"
    pytest-cov = "*"
    pre-commit = "*"
    black = { version = "*", allow-prereleases = true }
    pylint = "*"
    nbval = "*"
    sphinx = "*"
    sphinx-rtd-theme = "*"
    sphinxcontrib-bibtex = "*"
    recommonmark = "*"

[build-system]
    requires = ["poetry>=0.12"]
    build-backend = "poetry.masonry.api"